// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproMenu > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-menu
    d-flex
    justify-center
  "
  id="modified-unique-id-container"
>
  <amelipro-icon-btn-stub
    badge="false"
    bordered="false"
    btnlabel="Menu du service"
    class="amelipro-menu__btn--open"
    icon="menuSquare"
    iconbgcolor="transparent"
    iconcolor="ap-white"
    iconhoverbgcolor="transparent"
    iconhovercolor="ap-grey-lighten-5"
    large="true"
    medium="false"
    small="false"
    uniqueid="modified-unique-id-open-btn"
    xlarge="false"
  ></amelipro-icon-btn-stub>
  <div
    aria-label="Menu du service"
    aria-modal="true"
    color="ap-blue-darken-2"
    hide-overlay=""
    id="modified-unique-id-drawer"
    model-value="false"
    role="dialog"
    temporary=""
    width="300"
  >
    <div
      class="
        align-center
        amelipro-menu__container
        d-flex
        justify-space-between
      "
      id="modified-unique-id-drawer-content"
    >
      <h2
        class="
          amelipro-menu__title
          mb-0
          pa-1
          text-ap-white
          text-uppercase
        "
        id="modified-unique-id-drawer-title"
      >
        Modified menu header
      </h2>
      <amelipro-icon-btn-stub
        badge="false"
        bordered="false"
        btnlabel="Fermer le menu"
        class="menu-btn-close"
        iconbgcolor="transparent"
        iconcolor="ap-white"
        iconhoverbgcolor="transparent"
        iconhovercolor="ap-white"
        large="false"
        medium="false"
        small="false"
        uniqueid="modified-unique-id-close-menu-btn"
        xlarge="false"
      ></amelipro-icon-btn-stub>
    </div>
    <v-divider-stub
      class="my-2"
      color="ap-white"
      inset="false"
      style="opacity: 1 !important;"
      thickness="1px"
      vertical="false"
    ></v-divider-stub>
    <ul
      class="
        amelipro-menu__list
        list-style-none
      "
      id="modified-unique-id-list"
    >
      <li class="amelipro-menu__item">
        <div>
          <amelipro-btn-stub
            aria-controls="modified-unique-id-niveau-2-0"
            aria-expanded="false"
            badge="false"
            badgebgcolor="ap-pink"
            badgecolor="ap-white"
            bordered="false"
            classes="d-flex justify-space-between w-100 menu-btn"
            color="ap-blue-darken-2"
            disabled="false"
            elevation="0"
            hovercolor="ap-blue-lighten-3"
            hoverunderline="false"
            iconbgcolor="transparent"
            iconbordered="false"
            iconfocuscolor="ap-blue-darken-2"
            iconhovercolor="ap-blue-darken-2"
            iconleft="false"
            infoblock="false"
            minheight="3rem"
            size="60px"
            text="false"
            textcolor="ap-white"
            textfocuscolor="ap-blue-darken-2"
            texthovercolor="ap-blue-darken-2"
            tile=""
            type="button"
            underline="false"
            uniqueid="menu-btn__modified-menu-1"
          ></amelipro-btn-stub>
          <!-- v-if -->
        </div>
      </li>
    </ul>
    <v-divider-stub
      class="my-2"
      color="ap-white"
      inset="false"
      style="opacity: 1 !important;"
      thickness="1px"
      vertical="false"
    ></v-divider-stub>
    <div>
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        classes="w-100 pa-0 home-menu-btn"
        color="ap-blue-darken-2"
        disabled="false"
        elevation="0"
        hovercolor="ap-blue-darken-2"
        hoverunderline="false"
        href="modified-home-href"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="false"
        textcolor="ap-white"
        textfocuscolor="ap-blue-darken-2"
        texthovercolor="ap-blue-darken-2"
        tile=""
        to="modified-home-to"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-return-home-menu-btn"
      ></amelipro-btn-stub>
    </div>
  </div>
</div>
`;

exports[`AmeliproMenu > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="
    amelipro-menu
    d-flex
    justify-center
  "
  id="required-unique-id-container"
>
  <amelipro-icon-btn-stub
    badge="false"
    bordered="false"
    btnlabel="Menu du service"
    class="amelipro-menu__btn--open"
    icon="menuSquare"
    iconbgcolor="transparent"
    iconcolor="ap-white"
    iconhoverbgcolor="transparent"
    iconhovercolor="ap-grey-lighten-5"
    large="true"
    medium="false"
    small="false"
    uniqueid="required-unique-id-open-btn"
    xlarge="false"
  ></amelipro-icon-btn-stub>
  <div
    aria-label="Menu du service"
    aria-modal="true"
    color="ap-blue-darken-2"
    hide-overlay=""
    id="required-unique-id-drawer"
    model-value="false"
    role="dialog"
    temporary=""
    width="300"
  >
    <div
      class="
        align-center
        amelipro-menu__container
        d-flex
        justify-space-between
      "
      id="required-unique-id-drawer-content"
    >
      <h2
        class="
          amelipro-menu__title
          mb-0
          pa-1
          text-ap-white
          text-uppercase
        "
        id="required-unique-id-drawer-title"
      >
        Titre du service
      </h2>
      <amelipro-icon-btn-stub
        badge="false"
        bordered="false"
        btnlabel="Fermer le menu"
        class="menu-btn-close"
        iconbgcolor="transparent"
        iconcolor="ap-white"
        iconhoverbgcolor="transparent"
        iconhovercolor="ap-white"
        large="false"
        medium="false"
        small="false"
        uniqueid="required-unique-id-close-menu-btn"
        xlarge="false"
      ></amelipro-icon-btn-stub>
    </div>
    <v-divider-stub
      class="my-2"
      color="ap-white"
      inset="false"
      style="opacity: 1 !important;"
      thickness="1px"
      vertical="false"
    ></v-divider-stub>
    <ul
      class="
        amelipro-menu__list
        list-style-none
      "
      id="required-unique-id-list"
    ></ul>
    <v-divider-stub
      class="my-2"
      color="ap-white"
      inset="false"
      style="opacity: 1 !important;"
      thickness="1px"
      vertical="false"
    ></v-divider-stub>
    <div>
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        classes="w-100 pa-0 home-menu-btn"
        color="ap-blue-darken-2"
        disabled="false"
        elevation="0"
        hovercolor="ap-blue-darken-2"
        hoverunderline="false"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="false"
        textcolor="ap-white"
        textfocuscolor="ap-blue-darken-2"
        texthovercolor="ap-blue-darken-2"
        tile=""
        type="button"
        underline="false"
        uniqueid="required-unique-id-return-home-menu-btn"
      ></amelipro-btn-stub>
    </div>
  </div>
</div>
`;

exports[`AmeliproMenu > render correctly 1`] = `
<div
  class="
    amelipro-menu
    d-flex
    justify-center
  "
  id="amelipro-menu-id-container"
>
  <button
    class="
      amelipro-menu__btn--open
      btn--icon
      elevation-0
      rounded-0
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--icon
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    id="amelipro-menu-id-open-btn"
    plain=""
    style="height: auto; width: auto;"
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span
        class="d-sr-only"
        id="amelipro-menu-id-open-btn-btn-label"
      >
        Menu du service
      </span>
      <span
        class="
          amelipro-icon
          icon-custom
        "
        id="amelipro-menu-id-open-btn-icon"
      >
        <span
          aria-hidden="true"
          class="
            amelipro-custom-icon
            custom-color
            large
          "
          focusable="false"
          role="img"
          style="color: #FFFFFF;"
        >
          <span>
            <svg
              aria-hidden="true"
              style="enable-background:new 0 0 34 34;"
              viewBox="0 0 34 34"
              x="0px"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
              y="0px"
            >
              <path
                class="circle-color"
                d="M32,34H2c-1.1,0-2-0.9-2-2V2c0-1.1,0.9-2,2-2h30c1.1,0,2,0.9,2,2v30C34,33.1,33.1,34,32,34z"
              />
              <g class="shape-color">
                <rect
                  height="3.4"
                  width="24.6"
                  x="4.6"
                  y="4.4"
                />
                <rect
                  height="3.4"
                  width="24.6"
                  x="4.6"
                  y="9.9"
                />
                <rect
                  height="3.4"
                  width="24.6"
                  x="4.6"
                  y="15.2"
                />
                <path d="M4.6,29.4v-6.3h1.9l1.2,4.3l1.2-4.3h2v6.3H9.6v-4.9l-1.3,4.9H7l-1.3-4.9v4.9H4.6z M12.1,29.4v-6.3h4.6v1h-3.4v1.5h3.1v1h-3.1v1.7h3.6v1H12.1z M17.9,29.4v-6.3h1.3l2.6,4.2v-4.2h1.3v6.3h-1.3l-2.5-4.1v4.1H17.9z M24.3,23.1h1.3v3.5c0,0.5,0,0.8,0,1c0.1,0.2,0.2,0.5,0.4,0.6c0.2,0.2,0.4,0.2,0.7,0.2c0.4,0,0.7-0.1,0.8-0.2c0.2-0.1,0.2-0.2,0.3-0.5c0-0.2,0-0.6,0-1v-3.6h1.3v3.4c0,0.7,0,1.3-0.1,1.6c-0.1,0.3-0.2,0.6-0.4,0.8c-0.2,0.2-0.4,0.3-0.7,0.5c-0.3,0.1-0.7,0.2-1.3,0.2c-0.6,0-1-0.1-1.4-0.2c-0.3-0.1-0.6-0.2-0.7-0.5c-0.2-0.2-0.2-0.4-0.3-0.7c0.1-0.3,0.1-0.9,0.1-1.7V23.1z" />
              </g>
            </svg>
          </span>
        </span>
      </span>
    </span>
    <!---->
    <!---->
  </button>
  <div
    aria-label="Menu du service"
    aria-modal="true"
    color="ap-blue-darken-2"
    hide-overlay=""
    id="amelipro-menu-id-drawer"
    model-value="false"
    role="dialog"
    temporary=""
    width="300"
  >
    <div
      class="
        align-center
        amelipro-menu__container
        d-flex
        justify-space-between
      "
      id="amelipro-menu-id-drawer-content"
    >
      <h2
        class="
          amelipro-menu__title
          mb-0
          pa-1
          text-ap-white
          text-uppercase
        "
        id="amelipro-menu-id-drawer-title"
      >
        Titre du service
      </h2>
      <button
        class="
          btn--icon
          elevation-0
          menu-btn-close
          rounded-0
          v-btn
          v-btn--density-default
          v-btn--elevated
          v-btn--icon
          v-btn--size-default
          v-btn--variant-elevated
          v-theme--light
        "
        id="amelipro-menu-id-close-menu-btn"
        plain=""
        style="height: auto; width: auto;"
        type="button"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span
            class="d-sr-only"
            id="amelipro-menu-id-close-menu-btn-btn-label"
          >
            Fermer le menu
          </span>
          <span
            class="
              amelipro-icon
              icon-custom
            "
            id="amelipro-menu-id-close-menu-btn-icon"
          >
            <span
              class="amelipro-external-icon"
              style="background-color: transparent; border-radius: 50%; color: #FFFFFF; padding: 0px;"
            >
              <i
                aria-hidden="true"
                class="
                  M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z
                  mdi
                  notranslate
                  text-ap-white
                  v-icon
                  v-theme--light
                "
                style="font-size: 100%; height: 100%; width: 100%; display: block;"
              ></i>
            </span>
          </span>
        </span>
        <!---->
        <!---->
      </button>
    </div>
    <hr
      aria-orientation="horizontal"
      class="
        my-2
        text-ap-white
        v-divider
        v-theme--light
      "
      role="separator"
      style="border-top-width: 1px; opacity: 1 !important;"
    />
    <ul
      class="
        amelipro-menu__list
        list-style-none
      "
      id="amelipro-menu-id-list"
    >
      <li class="amelipro-menu__item">
        <div>
          <button
            aria-controls="amelipro-menu-id-niveau-2-0"
            aria-expanded="false"
            class="
              amelipro-btn
              amelipro-btn--style
              bg-ap-blue-darken-2
              d-flex
              elevation-0
              justify-space-between
              menu-btn
              rounded-0
              v-btn
              v-btn--density-default
              v-btn--flat
              v-btn--size-default
              v-btn--variant-flat
              v-theme--light
              w-100
            "
            id="menu-btn__1"
            style="height: auto; min-height: 2.5rem; color: #FFFFFF !important;"
            type="button"
          >
            <span class="v-btn__overlay"></span>
            <span class="v-btn__underlay"></span>
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              <span class="
                align-center
                amelipro-custom-btn
                d-flex
                flex-row
              ">
                Menu 1
                <span
                  class="
                    amelipro-btn__icon--right
                    amelipro-icon
                    d-block
                  "
                  id="menu-btn__1-icon"
                >
                  <span
                    class="amelipro-external-icon"
                    style="background-color: transparent; border-radius: 50%; color: #FFFFFF; padding: 0px; height: 1.5rem; width: 1.5rem;"
                  >
                    <i
                      aria-hidden="true"
                      class="
                        M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z
                        mdi
                        notranslate
                        text-ap-white
                        v-icon
                        v-theme--light
                      "
                      style="font-size: 100%; height: 100%; width: 100%; display: block;"
                    ></i>
                  </span>
                </span>
                <!-- v-if -->
              </span>
            </span>
            <!---->
            <!---->
          </button>
          <!-- v-if -->
        </div>
      </li>
      <li class="amelipro-menu__item">
        <div>
          <button
            aria-controls="amelipro-menu-id-niveau-2-1"
            aria-expanded="false"
            class="
              amelipro-btn
              amelipro-btn--style
              bg-ap-blue-darken-2
              d-flex
              elevation-0
              justify-space-between
              menu-btn
              rounded-0
              v-btn
              v-btn--density-default
              v-btn--flat
              v-btn--size-default
              v-btn--variant-flat
              v-theme--light
              w-100
            "
            id="menu-btn__2"
            style="height: auto; min-height: 2.5rem; color: #FFFFFF !important;"
            type="button"
          >
            <span class="v-btn__overlay"></span>
            <span class="v-btn__underlay"></span>
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              <span class="
                align-center
                amelipro-custom-btn
                d-flex
                flex-row
              ">
                Menu 2
                <span
                  class="
                    amelipro-btn__icon--right
                    amelipro-icon
                    d-block
                  "
                  id="menu-btn__2-icon"
                >
                  <span
                    class="amelipro-external-icon"
                    style="background-color: transparent; border-radius: 50%; color: #FFFFFF; padding: 0px; height: 1.5rem; width: 1.5rem;"
                  >
                    <i
                      aria-hidden="true"
                      class="
                        M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z
                        mdi
                        notranslate
                        text-ap-white
                        v-icon
                        v-theme--light
                      "
                      style="font-size: 100%; height: 100%; width: 100%; display: block;"
                    ></i>
                  </span>
                </span>
                <!-- v-if -->
              </span>
            </span>
            <!---->
            <!---->
          </button>
          <!-- v-if -->
        </div>
      </li>
      <li class="amelipro-menu__item">
        <div>
          <button
            class="
              amelipro-btn
              amelipro-btn--style
              bg-ap-blue-darken-2
              elevation-0
              menu-btn
              rounded-0
              v-btn
              v-btn--density-default
              v-btn--flat
              v-btn--size-default
              v-btn--variant-flat
              v-theme--light
              w-100
            "
            id="menu-btn__3"
            style="height: auto; min-height: 2.5rem; color: #FFFFFF !important;"
            type="button"
          >
            <span class="v-btn__overlay"></span>
            <span class="v-btn__underlay"></span>
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              <span class="
                align-center
                amelipro-custom-btn
                d-flex
                flex-row
              ">
                Menu 3
                <!-- v-if -->
                <!-- v-if -->
              </span>
            </span>
            <!---->
            <!---->
          </button>
        </div>
      </li>
    </ul>
    <hr
      aria-orientation="horizontal"
      class="
        my-2
        text-ap-white
        v-divider
        v-theme--light
      "
      role="separator"
      style="border-top-width: 1px; opacity: 1 !important;"
    />
    <div>
      <button
        class="
          amelipro-btn
          amelipro-btn--style
          bg-ap-blue-darken-2
          elevation-0
          home-menu-btn
          pa-0
          rounded-0
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-flat
          v-theme--light
          w-100
        "
        id="amelipro-menu-id-return-home-menu-btn"
        style="height: auto; min-height: 2.5rem; color: #FFFFFF !important;"
        type="button"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="
            align-center
            amelipro-custom-btn
            d-flex
            flex-row
          ">
            <img
              alt="Accueil Amelipro"
              class="home-menu-btn__img"
              src="/src/assets/amelipro/img/logo-menu.svg"
            />
            <!-- v-if -->
            <!-- v-if -->
          </span>
        </span>
        <!---->
        <!---->
      </button>
    </div>
  </div>
</div>
`;
